--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
   "name": "projeto",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
+  "dependencies": {
+    "@prisma/client": "^5.6.0",
+    "expo": "~49.0.15",
+    "expo-status-bar": "~1.6.0",
+    "express": "^4.18.2",
+    "react": "18.2.0",
+    "react-native": "0.72.6"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@types/node": "^20.10.0",
+    "prisma": "^5.6.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2"
+  },
+  "private": true,
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.9.0",
-    "prisma": "^5.5.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.5.2",
-    "express": "^4.18.2",
-    "ts-node-dev": "^2.0.0"
-  }
+  "description": ""
 }
